syntax = "proto3";

package pb;

option go_package = "github.com/jerrykhh/job-queue/grpc/pb";

message JobQueue {
    string id = 1;
    string name = 2;
    int32 run_every_sec = 3;
    optional int32 seed = 4;
    optional int32 dequeue_count = 5;
}

message Job {
    string id = 1;
    string script = 2;
    string parma = 3;
    optional int32 priority = 4;
}