syntax = "proto3";

package pb;

import "jobQueue.proto";

option go_package = "github.com/jerrykhh/job-queue/grpc/pb";


service JobQueueService {
    rpc Start (JobQueueRequest) returns (JobQueue);
    rpc Pause (JobQueueRequest) returns (JobQueue);
    rpc Create (JobQueue) returns (CreateJobQueueResponse);
    rpc List (JobQueueRequest) returns (stream Job);
    rpc Enqueue (EnqueueRequest) returns (EnqueueResponse);
    rpc Dequeue (JobQueueRequest) returns (DequeueResponse);
    rpc Remove (JobQueueRequest) returns (JobQueue);
    rpc RemoveJob (RemoveJobRequest) returns (Job);
}

message JobQueueRequest {
    string queue_id = 1;
}

message JobRequest {
    string job_id = 1;
}

message CreateJobQueueResponse {
    string queue_id = 1;
    JobQueue job_queue = 2;
}

message EnqueueRequest {
    string queue_id = 1;
    string script = 2;
    string parma = 3;
    optional int32 priority = 4;
}

message EnqueueResponse {
    string queue_id = 1;
    Job job = 2;
}

message DequeueResponse {
    repeated Job items = 1;
}

message RemoveJobRequest {
    string queue_id = 1;
    Job job = 2;
}